# Ncorrcppgui

./: CMakeLists.txt  dicparametersdialog.cpp  dicparametersdialog.h  dicparametersdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Ncorr/: Array2D.h  Data2D.cpp  Data2D.h  Disp2D.cpp  Disp2D.h  Image2D.cpp  Image2D.h  Ncorr_vs2015.cpp  Ncorr_vs2015.vcxproj  Ncorr_vs2015.vcxproj.filters  ReadMe.txt  Strain2D.cpp  Strain2D.h  ncorr.cpp  stdafx.cpp
